--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-gesture-handler": "^2.30.0",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
+    "react-native-worklets": "^0.7.1",
     "tamagui": "^1.143.1"
   },
   "devDependencies": {
