--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-community/slider": "^5.1.2",
     "@react-native/new-app-screen": "0.83.1",
     "@react-navigation/bottom-tabs": "^7.9.0",
-    "@react-navigation/native": "^7.1.26",
+    "@react-navigation/drawer": "^7.7.11",
+    "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.0",
     "@tamagui/config": "^1.144.1",
     "react": "19.2.0",
     "react-native": "0.83.1",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.30.0",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "^0.7.1",
     "tamagui": "^1.143.1"
   },
@@ -38,6 +44,7 @@
     "@react-native/typescript-config": "0.83.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
